# TerMC

./: .gitignore  README.md  TermuxMC  nose.py  pyproject.toml  setup.py
termc/: MANIFIEST.json  __init__.py  data.py  termc.py
termc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
